<resources>
    <string name="app_name">Note Card</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="silent_mode">silent_mode</string>
    <string name="speed">speed</string>
    <string name="speed_default">1</string>
    <string name="internet">Please connect to the internet...</string>
    <string name="stories">Stories</string>
    <string name="action_settings">Settings</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="data_added">Note added to database</string>
    <string name="error">ERROR:</string>
    <string name="not_signed">User is not Signed in</string>
    <string name="empty_fields">Please fill empty fields</string>
    <string name="not_deleted">Not Possible to delete</string>
    <string name="data_updated">Data Updated</string>
    <string name="delete_notes">Notes Deleted</string>
    <string name="video_upload">Video Uploaded</string>
    <string name="create_note">Create Note</string>
    <string name="delete">Delete Note</string>
    <string name="update">Update Note</string>
    <string name="back_rotate">Rotate Back</string>
    <string name="front_rotate">Rotate Front</string>
    <string name="play_pause">Play and Pause</string>
    <string name="note_pic">Notes</string>
    <string name="user_pic">User Picture</string>
    <string name="my_stories">My Stories</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="enter_title">Enter your title</string>
    <string name="save_edit">(Save Edit)</string>
    <string name="write_notes">Start Writing Your Notes Here!</string>
    <string name="choose_text">Choose Text</string>
    <string name="title_note">Title</string>
    <string name="time">time</string>
    <string name="personel">PERSONAL</string>
    <string name="not_silent">Device is not in silent mode while recording</string>
    <string name="silent">Device in Silent Mode while recording</string>
    <string name="fulfill">fulfilled</string>
    <string name="record_video">Record Video</string>
    <string name="create_new_note">Create New Note</string>
    <string name="signed_in">Signed in!</string>
    <string name="cancel_sign_in">Sign in Cancelled</string>
    <string name="speed_number">Please select a integer number between 0 to 15 included</string>
    <string name="video_save">Video saved: </string>
    <string name="failed">Failed </string>
    <string name="preview">CameraPreview</string>
    <string name="camera_close_interrupt">Interrupted while trying to lock camera closing.</string>
    <string name="lock_camera_interrupt">Interrupted while trying to lock camera opening.</string>
    <string name="not_access">Cannot access the camera.</string>
    <string name="back_camera">BackCamera</string>
    <string name="test">Test</string>
    <string name="front_camera">FrontCamera</string>
    <string name="time_out">Time out waiting to lock camera opening.</string>
    <string name="name_user">Android Studio</string>
    <string name="user_email">android.studio@android.com</string>
    <string name="my_mail"> divyankvijay.96@gmail.com</string>
    <string name="subject">Write your problem brief description here</string>
    <string name="mail_to">mailto:</string>
    <string name="no_content">No Content</string>
    <string name="upload_video">Uploading Video...</string>
    <string name="text_screen">Create your notes by clicking on plus button</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy">Privacy Policy

[Developer name or Company name] built the [App Name] app as [open source | free | freemium | ad-supported | commercial] app. This SERVICE is provided by [Developer name or Company name] [at no cost] and is intended for use as is.

This page is used to inform website visitors regarding [my|our] policies with the collection, use, and disclosure of Personal Information if anyone decided to use [my|our] Service.

If you choose to use [my|our] Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that [I | we] collect is used for providing and improving the Service. [I | we] will not use or share your information with anyone except as described in this Privacy Policy.

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at [App Name] unless otherwise defined in this Privacy Policy.

Information Collection and Use

For a better experience, while using our Service, [I | we] may require you to provide us with certain personally identifiable information[add whatever else you collect here, e.g. users name | address | location | pictures] The information that [I | we] request is [retained on your device and is not collected by [me|us] in any way]|[will be retained by us and used as described in this privacy policy].

The app does use third party services that may collect information used to identify you.

Link to privacy policy of third party service providers used by the app

Google Play Services
Log Data

[I | we] want to inform you that whenever you use [my|our] Service, in a case of an error in the app [I | we] collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing [my|our] Service, the time and date of your use of the Service, and other statistics.

Cookies

Cookies are files with small amount of data that is commonly used an anonymous unique identifier. These are sent to your browser from the website that you visit and are stored on your device internal memory.

This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collection information and to improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.

Service Providers

[I | we] may employ third-party companies and individuals due to the following reasons:

To facilitate our Service;
To provide the Service on our behalf;
To perform Service-related services; or
To assist us in analyzing how our Service is used.
[I | we] want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.

Security

[I | we] value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and [I | we] cannot guarantee its absolute security.

Links to Other Sites

This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by [me|us]. Therefore, [I | we] strongly advise you to review the Privacy Policy of these websites. [I | we] have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.

Children’s Privacy

These Services do not address anyone under the age of 13. [I | we] do not knowingly collect personally identifiable information from children under 13. In the case [I | we] discover that a child under 13 has provided [me|us] with personal information, [I | we] immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact [me|us] so that [I | we] will be able to do necessary actions.

Changes to This Privacy Policy

[I | we] may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. [I | we] will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.

Contact Us

If you have any questions or suggestions about [my|our] Privacy Policy, do not hesitate to contact [me|us].

This privacy policy page was created at privacypolicytemplate.net and modified/generated by App Privacy Policy Generator</string>

    <string name="intro_message">
        <![CDATA[


           Read script while recording


        ]]>
    </string>
    <string name="appwidget_text">Note Card</string>
    <string name="add_widget">Add widget</string>
</resources>
