<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_speaker_notes_black_24px"
            android:title="@string/my_stories" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_black_24px"
            android:title="@string/feedback" />

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/privacy_policy"
            android:icon="@drawable/ic_info_outline_black_24px"
            android:title="@string/privacy_policy"></item>
    </group>


    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_new_black_24px"
                android:title="@string/logout"></item>
        </menu>
    </item>

</menu>
